# lab-on-prog

./: pointer
Algorithms Lists/: lab13.md  list.c
Bit operations/: lab5.c  lab5.md
Cycles/: lab3.c  lab3.md
Lines/: lab7.md  prog.c
Matrices. The Minor Method/: lab8.c  lab8.md
Nested loops/: lab4.md
One-dimensional arrays/: lab6.md
Preprocessor and macros/: lab9.c  lab9.md
Quicksort, Counting sort, Selectsort/: lab12.md
Quicksort, Countingsort, Selectsort/: lab12.md  lab_sort.c
RGZ/: readme.md
RGZ/3/: CMakeLists.txt  DeKeyTable.c  KeyTable.c  mylib.c  mylib.h
RGZ/4/: CMakeLists.txt  KeyTable.c  mylib.c  mylib.h
RGZ/5/: CMakeLists.txt  DeKeyTable.c  encrypted.txt  input.txt
RGZ/the folder with the usual program code/: out  rgz.c  rgz.py
The program debugger/: lab11.c  lab11.md
Unit testing/: CMakeLists.txt  readme.md  sort.c  test_sort.c
Working_With_Files/: file.c  file.txt  out.txt  readme.md
additional task/: knapsack  knapsack.c  prog_bank  prog_rec  prog_snail  recurcion.c  snail_matrix.c  t_bank.c
binary file/: file_struct.c
brinary file/: readme.md
lab10/: Makefile  functions.c  functions.h  main.c  program
lab10/3/: lab10.c  prog
lab11/: a.out  lab11
lab12/: project_test.md
lab2/: lab2.c  lab2.md
lab4/: lab4  lab4.c  lad4.c
lab5/: lab5
lab6/: l.c  prog
lab7/: executable  l  prog.c
lab8/: prog
lab9/: lab9.c  prog
lab_git/: file1.txt  greeting.txt  sort.c
libre/: readme.md
prog/: lab2  lab2.c  lab3
pthread/: readme.md
